--- a/index.html
+++ b/index.html
@@ -8,10 +8,24 @@
 </head>
 
 <body>
+    <!-- olaide's work here  -->
     <header>logo and navbar </header>
-    <main>Hero page</main>
-    <section>second part</section>
-    <footer>details</footer>
+    <main>
+        <section class="hero"></section>
+        <!-- flora's work here  -->
+        <section> </section>
+        <!-- betelhem work here  -->
+        <section></section>
+         <!-- ada's work here  -->
+         <section></section>
+          <!-- stella work here  -->
+        <section></section>
+         <!-- zainab's work here  -->
+         <section></section>
+    </main>
+
+    <!-- gloria's work here  -->
+    <footer></footer>
 </body>
 
 </html>
