Added a file for the gallery pictures and worked on the gallery section allotted to me with the styling

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sixsters landing Page</title>
+    <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -17,6 +18,22 @@
         <!-- betelhem work here  -->
         <section></section>
          <!-- ada's work here  -->
+            <div class="gallery-wrapper">
+                <div class="content">
+                    <h1>Gallery</h1>
+                </div>
+                <div class="gallery">
+                    <div class="lone-picture">
+                        <img src="./gallery/Gallery1.png" alt="Gallery picture 1">
+                    </div>
+                    <div class="group-picture">
+                        <img src="./gallery/Gallery2.png" alt="Gallery picture 2">
+                        <img src="./gallery/Gallery3.png" alt="Gallery picture 3">
+                        <img src="./gallery/Gallery4.png" alt="Gallery picture 4"> 
+                    </div>
+                </div>
+            </div>
+         
          <section></section>
           <!-- stella work here  -->
         <section></section>
