--- a/index.html
+++ b/index.html
@@ -5,11 +5,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sixsters landing Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <!-- olaide's work here  -->
-    <header>logo and navbar </header>
+    <header>
+        <nav>
+            <div class="logo"><span>S</span>ixsters</div>
+            <div class="but1">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#">Contact us</a></li>
+                    <li><a href="#">Our service</a></li>
+                </ul>
+            </div>
+            <div class="but2">
+                <ul>
+                    <li><a href="#">Login </a></li>
+                    <li><a href="#">Sign up</a></li>
+                </ul>
+            </div>
+            <div><img src="./menu.svg" alt="Options"> </div>
+        </nav>
+    </header>
+
     <main>
         <section class="hero"></section>
         <!-- flora's work here  -->
