--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sixsters landing Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -16,12 +17,54 @@
         <section> </section>
         <!-- betelhem work here  -->
         <section></section>
-         <!-- ada's work here  -->
-         <section></section>
-          <!-- stella work here  -->
+        <!-- ada's work here  -->
         <section></section>
-         <!-- zainab's work here  -->
-         <section></section>
+        <!-- stella work here  -->
+        <section></section>
+        <!-- zainab's work here  -->
+        <section class="contact">
+            <aside>
+                <img src="" alt="">
+            </aside>
+            <form>
+                <article class="fhead">
+                    <h1>Contact Us</h1>
+                    <p>Our lovely team would love to hear from you</p>
+                </article>
+                <section class="fdetails">
+                    <div class="fname">
+                        <div class="fill">
+                            <label for="firstname">First Name</label>
+                            <input type="text" placeholder="Jane">
+                        </div>
+
+                        <div class="fill">
+                            <label for="lastname">Last Name</label>
+                            <input type="text" placeholder="Doe">
+                        </div>
+                    </div>
+
+                    <div class="fname">
+                        <div class="fill">
+                            <label for="email">Email</label>
+                            <input type="email" placeholder="janedoe@gmail.com">
+                        </div>
+
+                        <div class="fill">
+                            <label for="phonenumber">Phone Number</label>
+                            <input type="tel" placeholder="08000011111">
+                        </div>
+                    </div>
+                    <div class="fill">
+                        <label for="issue">Issue</label>
+                        <textarea name="issue" id="" cols="30" rows="4"></textarea>
+                    </div>
+                </section>
+                <button></button>
+                <img src="/ai.svg" alt="">
+                <img src="/submit.svg" alt="" style="width: 30px;">
+            </form>
+        </section>
     </main>
 
     <!-- gloria's work here  -->
