Edited the HTML to put my part in the right section and edited the media query

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <!-- betelhem work here  -->
         <section></section>
          <!-- ada's work here  -->
+         <section>
             <div class="gallery-wrapper">
                 <div class="content">
                     <h1>Gallery</h1>
@@ -34,7 +35,7 @@
                 </div>
             </div>
          
-         <section></section>
+         </section>
           <!-- stella work here  -->
         <section></section>
          <!-- zainab's work here  -->
