--- a/index.html
+++ b/index.html
@@ -34,7 +34,28 @@
     <main>
         <section class="hero"></section>
         <!-- flora's work here  -->
-        <section> </section>
+        <section class="why-us">
+            <div class="why-us_cont">
+                <div class="item_1">
+                    <h3>Why you should work with us</h3>
+                    <img src="./img/Why-us_img.jpg" alt="sitting room setting">
+                </div>
+                <div class="item_2">
+                    <h5>
+                        Elevate Your Space with <span>Sixsters</span>
+                    </h5>
+                    <p>
+                        Transform your living and working spaces with Sixsters, where interior decor becomes an art form. Our team of passionate designers crafts personalized experiences, ensuring every corner tells a story. 
+                    </p>
+                    <p>
+                        At Sixsters, we don't just create interiors; we curate atmospheres. Immerse yourself in a world where each design is a reflection of your unique style and personality. From concept to execution, our dedicated team meticulously tailors every detail, ensuring a seamless blend of aesthetics and functionality.
+
+                     Why choose us? Because we go beyond trends, focusing on timeless elegance that transcends the ordinary.<br>
+                     Why choose us? Because we go beyond trends, focusing on timeless elegance that transcends the ordinary. Collaborate with Sixsters, and let us turn your spaces into breathtaking showcases, where every moment is an ode to exceptional design.
+                    </p>
+                </div>
+            </div>
+        </section>
         <!-- betelhem work here  -->
         <section></section>
          <!-- ada's work here  -->
