--- a/index.html
+++ b/index.html
@@ -4,13 +4,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Sixsters landing Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <!-- olaide's work here  -->
-    <header>logo and navbar </header>
+    <header>
+        <nav>
+            <div class="logo"><span>S</span>ixsters</div>
+            <div class="but1">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#">Contact us</a></li>
+                    <li><a href="#">Our service</a></li>
+                </ul>
+            </div>
+            <div class="but2">
+                <ul>
+                    <li><a href="#">Login </a></li>
+                    <li><a href="#">Sign up</a></li>
+                </ul>
+            </div>
+            <div><img src="./menu.svg" alt="Options"> </div>
+        </nav>
+    </header>
+
     <main>
         <section class="hero"></section>
         <!-- flora's work here  -->
@@ -34,16 +54,78 @@
                      Why choose us? Because we go beyond trends, focusing on timeless elegance that transcends the ordinary. Collaborate with Sixsters, and let us turn your spaces into breathtaking showcases, where every moment is an ode to exceptional design.
                     </p>
                 </div>
-            </div>
+            </div
         </section>
         <!-- betelhem work here  -->
         <section></section>
          <!-- ada's work here  -->
-         <section></section>
+         <section>
+            <div class="gallery-wrapper">
+                <div class="content">
+                    <h1>Gallery</h1>
+                </div>
+                <div class="gallery">
+                    <div class="lone-picture">
+                        <img src="./gallery/Gallery1.png" alt="Gallery picture 1">
+                    </div>
+                    <div class="group-picture">
+                        <img src="./gallery/Gallery2.png" alt="Gallery picture 2">
+                        <img src="./gallery/Gallery3.png" alt="Gallery picture 3">
+                        <img src="./gallery/Gallery4.png" alt="Gallery picture 4"> 
+                    </div>
+                </div>
+            </div>
+         
+         </section>
           <!-- stella work here  -->
+        <!-- ada's work here  -->
         <section></section>
-         <!-- zainab's work here  -->
-         <section></section>
+        <!-- stella work here  -->
+        <section></section>
+        <!-- zainab's work here  -->
+        <section class="contact">
+            <aside>
+                <img src="" alt="">
+            </aside>
+            <form>
+                <article class="fhead">
+                    <h1>Contact Us</h1>
+                    <p>Our lovely team would love to hear from you</p>
+                </article>
+                <section class="fdetails">
+                    <div class="fname">
+                        <div class="fill">
+                            <label for="firstname">First Name</label>
+                            <input type="text" placeholder="Jane">
+                        </div>
+
+                        <div class="fill">
+                            <label for="lastname">Last Name</label>
+                            <input type="text" placeholder="Doe">
+                        </div>
+                    </div>
+
+                    <div class="fname">
+                        <div class="fill">
+                            <label for="email">Email</label>
+                            <input type="email" placeholder="janedoe@gmail.com">
+                        </div>
+
+                        <div class="fill">
+                            <label for="phonenumber">Phone Number</label>
+                            <input type="tel" placeholder="08000011111">
+                        </div>
+                    </div>
+                    <div class="fill">
+                        <label for="issue">Issue</label>
+                        <textarea name="issue" id="" cols="30" rows="4"></textarea>
+                    </div>
+                </section>
+                <button></button>
+                <img src="/ai.svg" alt="">
+                <img src="/submit.svg" alt="" style="width: 30px;">
+            </form>
+        </section>
     </main>
 
     <!-- gloria's work here  -->
