--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                      Why choose us? Because we go beyond trends, focusing on timeless elegance that transcends the ordinary. Collaborate with Sixsters, and let us turn your spaces into breathtaking showcases, where every moment is an ode to exceptional design.
                     </p>
                 </div>
-            </div
+            </div>
         </section>
         <!-- betelhem work here  -->
         <section></section>
