--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
             <div class="why-us_cont">
                 <div class="item_1">
                     <h3>Why you should work with us</h3>
-                    <img src="./img/Why-us_img.jpg" alt="sitting room setting">
+                    <img src="./img/Why-us_img.jpg" alt="sitting room setting" id="img">
                 </div>
                 <div class="item_2">
                     <h5>
-                        Elevate Your Space with <span>Sixsters</span>
+                        Elevate Your Space with <span id="six">Sixsters</span>
                     </h5>
                     <p>
                         Transform your living and working spaces with Sixsters, where interior decor becomes an art form. Our team of passionate designers crafts personalized experiences, ensuring every corner tells a story. 
