--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <main>
         <section class="hero"></section>
         <!-- flora's work here  -->
-        <section class="why-us">
+         <section class="why-us">
             <div class="why-us_cont">
                 <div class="item_1">
                     <h3>Why you should work with us</h3>
@@ -58,8 +58,8 @@
         </section>
         <!-- betelhem work here  -->
         <section></section>
-         <!-- ada's work here  -->
-         <section>
+        <!-- ada's work here  -->
+        <section>
             <div class="gallery-wrapper">
                 <div class="content">
                     <h1>Gallery</h1>
@@ -71,22 +71,20 @@
                     <div class="group-picture">
                         <img src="./gallery/Gallery2.png" alt="Gallery picture 2">
                         <img src="./gallery/Gallery3.png" alt="Gallery picture 3">
-                        <img src="./gallery/Gallery4.png" alt="Gallery picture 4"> 
+                        <img src="./gallery/Gallery4.png" alt="Gallery picture 4">
                     </div>
                 </div>
             </div>
-         
-         </section>
-          <!-- stella work here  -->
+
+        </section>
+        <!-- stella work here  -->
         <!-- ada's work here  -->
         <section></section>
         <!-- stella work here  -->
         <section></section>
         <!-- zainab's work here  -->
         <section class="contact">
-            <aside>
-                <img src="" alt="">
-            </aside>
+            <aside><img src="/sitting.jpeg" alt=""></aside>
             <form>
                 <article class="fhead">
                     <h1>Contact Us</h1>
@@ -121,9 +119,15 @@
                         <textarea name="issue" id="" cols="30" rows="4"></textarea>
                     </div>
                 </section>
-                <button></button>
-                <img src="/ai.svg" alt="">
-                <img src="/submit.svg" alt="" style="width: 30px;">
+                <button class="submit">
+                    <p>Submit</p>
+                    <img src="/submit.svg" alt="">
+                </button>
+                <div class="smlinks">
+                    <img src="/ai.svg" alt="Ai">
+                    <img src="/goodle.svg" alt="google">
+                    <img src="/youtube.svg" alt="youtube">
+                </div>
             </form>
         </section>
     </main>
