--- a/index.html
+++ b/index.html
@@ -5,13 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sixsters landing Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <!-- olaide's work here  -->
-    <header>logo and navbar </header>
+    <header></header>
     <main>
-        <section class="hero"></section>
+      <!-- sadiya's work here -->
+        <section class="hero">
+
+          <div class="hero-info">
+            <h1>Decoration of the home is same as meditation on the <br> soul. - <span>Sixsters</span></h1>
+            <p>Are you finding it difficult to decorate your home? <br> worry no more, because we have the answer. <br> 
+                Our team of experts have the skills and <br>experiences to deliver top quality results.
+            </p>
+            <button id="one">sign up</button> <button id="two">login</button>
+          </div>
+          <div class="hero-image">
+             <img src="img.jpeg" alt="parlor settings">
+          </div>
+
+        </section>
         <!-- flora's work here  -->
         <section> </section>
         <!-- betelhem work here  -->
