--- a/index.html
+++ b/index.html
@@ -24,30 +24,31 @@
             <div class="but2">
                 <ul>
                     <li><a href="#">Login </a></li>
-                    <li><a href="#">Sign up</a></li>
+                    <li><a href="#">Sign Up</a></li>
                 </ul>
             </div>
             <div><img src="./menu.svg" alt="Options"> </div>
         </nav>
     </header>
     <main>
-      <!-- sadiya's work here -->
+        <!-- sadiya's work here -->
         <section class="hero">
 
-          <div class="hero-info">
-            <h1>Decoration of the home is same as meditation on the <br> soul. - <span>Sixsters</span></h1>
-            <p>Are you finding it difficult to decorate your home? <br> worry no more, because we have the answer. <br> 
-                Our team of experts have the skills and <br>experiences to deliver top quality results.
-            </p>
-            <button id="one">sign up</button> <button id="two">login</button>
-          </div>
-          <div class="hero-image">
-             <img src="img.jpeg" alt="parlor settings">
-          </div>
+            <div class="hero-info">
+                <h1>Decoration of the home is same as meditation on the <br> soul. - <span>Sixsters</span></h1>
+                <p>Are you finding it difficult to decorate your home? <br> worry no more, because we have the answer.
+                    <br>
+                    Our team of experts have the skills and <br>experiences to deliver top quality results.
+                </p>
+                <button id="one">sign up</button> <button id="two">login</button>
+            </div>
+            <div class="hero-image">
+                <img src="img.jpeg" alt="parlor settings">
+            </div>
 
         </section>
         <!-- flora's work here  -->
-         <section class="why-us">
+        <section class="why-us">
             <div class="why-us_cont">
                 <div class="item_1">
                     <h3>Why you should work with us</h3>
@@ -58,13 +59,21 @@
                         Elevate Your Space with <span id="six">Sixsters</span>
                     </h5>
                     <p>
-                        Transform your living and working spaces with Sixsters, where interior decor becomes an art form. Our team of passionate designers crafts personalized experiences, ensuring every corner tells a story. 
+                        Transform your living and working spaces with Sixsters, where interior decor becomes an art
+                        form. Our team of passionate designers crafts personalized experiences, ensuring every corner
+                        tells a story.
                     </p>
                     <p>
-                        At Sixsters, we don't just create interiors; we curate atmospheres. Immerse yourself in a world where each design is a reflection of your unique style and personality. From concept to execution, our dedicated team meticulously tailors every detail, ensuring a seamless blend of aesthetics and functionality.
+                        At Sixsters, we don't just create interiors; we curate atmospheres. Immerse yourself in a world
+                        where each design is a reflection of your unique style and personality. From concept to
+                        execution, our dedicated team meticulously tailors every detail, ensuring a seamless blend of
+                        aesthetics and functionality.
 
-                     Why choose us? Because we go beyond trends, focusing on timeless elegance that transcends the ordinary.<br>
-                     Why choose us? Because we go beyond trends, focusing on timeless elegance that transcends the ordinary. Collaborate with Sixsters, and let us turn your spaces into breathtaking showcases, where every moment is an ode to exceptional design.
+                        Why choose us? Because we go beyond trends, focusing on timeless elegance that transcends the
+                        ordinary.<br>
+                        Why choose us? Because we go beyond trends, focusing on timeless elegance that transcends the
+                        ordinary. Collaborate with Sixsters, and let us turn your spaces into breathtaking showcases,
+                        where every moment is an ode to exceptional design.
                     </p>
                 </div>
             </div>
