--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <!-- betelhem work here  -->
         <section>
             <div class="wrapper">
-                <div class="service-content">
+                <div class="content">
                     <h1 class="title">Our Service</h1>
                     <div class="line">
                         <hr>`
